--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <h3><strong>Education and Schools</strong></h3>
   <p>
   <ul>
-    <li>Martin Primary Schools</li>
-    <li>General Smuts High Schools</li>
+    <li>Primary Schools</li>
+    <li>High Schools</li>
     <li>Tswane North Colleage</li>
     <li>University of South Africa</li>
   </ul>
