--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <td>
       <img
-        src="https://instagram.fdur1-1.fna.fbcdn.net/v/t51.2885-19/s150x150/19436780_1720010311639960_7734547603953549312_a.jpg?_nc_ht=instagram.fdur1-1.fna.fbcdn.net&_nc_ohc=VGLXoCaknKAAX9q2R8K&tp=1&oh=4069559e42e2034a5b85ed5506446de5&oe=6000B652"
+        src="Images.tshepo_n.jpg"
         alt="tshepo thokoa profile picture">
     </td>
     <td>
