--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <td>
       <img
-        src="Images.tshepo_n.jpg"
+        src="Images/tshepo_n.jpg"
         alt="tshepo thokoa profile picture">
     </td>
     <td>
