--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <td>
       <img
         src="Images/tshepo_n.jpg"
-        alt="tshepo thokoa profile picture">
+        alt="Tshepo Thokoa profile picture">
     </td>
     <td>
       <h1>Tshepo Thokoa</h1>
