Adjusted Image size

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <td>
       <img
         src="Images/tshepo_n.jpg"
-        alt="Tshepo Thokoa profile picture">
+        alt="Tshepo Thokoa profile picture"
+           width="200"
+           height="200">
     </td>
     <td>
       <h1>Tshepo Thokoa</h1>
