--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
   <hr />
   <table>
     <td>
-      <h3><a href="C:\Users\Cars on the Internet\Desktop\Tycoon\Coding\App Brewary\Web Development Projects\HTML Personal Website\hobbies.html" </a>Hobbies</h3>
+      <h3><a href="hobbies.html" </a>Hobbies</h3>
     </td>
     <td>
-      <h3><a href="C:\Users\Cars on the Internet\Desktop\Tycoon\Coding\App Brewary\Web Development Projects\HTML Personal Website\ContactDetails.html" </ahref>Contact me on</h3>
+      <h3><a href="ContactDetails.html" </ahref>Contact me on</h3>
     </td>
   </table>
 
