--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
     </tr>
   </tbody>
 </table>
-
+  
   <hr />
   <table>
     <td>
-      <h3><a href="hobbies.html" </a>Hobbies</h3>
+      <h3><a href="hobbies.html"> Hobbies</a></h3>
     </td>
     <td>
-      <h3><a href="ContactDetails.html" </ahref>Contact me on</h3>
+      <h3><a href="ContactDetails.html"> Contact me on</a></h3>
     </td>
   </table>
 
