Home page link adjusted
Home page link adjusted for Git hosting

--- a/hobbies.html
+++ b/hobbies.html
@@ -12,7 +12,7 @@
       <li>watching soccer</li>
     </ol>
     <p>
-      <a href="C:\Users\Cars on the Internet\Desktop\Tycoon\Coding\App Brewary\Web Development Projects\HTML Personal Website\index.html">Back To Main Page</a>
+      <a href="index.html">Back To Main Page</a>
     </p>
   </body>
 </html>
