--- a/ContactDetails.html
+++ b/ContactDetails.html
@@ -6,6 +6,6 @@
   </head>
   <p>This is my email address Kgskhokho@gmail.com</p>
   <body>
-<a href="C:\Users\Cars on the Internet\Desktop\Tycoon\Coding\App Brewary\Web Development Projects\HTML Personal Website\index.html">Back To the main page</a>
+<a href="index.html">Back To the main page</a>
   </body>
 </html>
